--- a/testapp/public/index.html
+++ b/testapp/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <script src="socket.io/socket.io.js"></script>
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <h1>JS</h1>
 <div class="logcss" id="log">
 <h3 class="h3">Console</h3>
@@ -54,5 +54,7 @@ function Second() {
 </script>
 <button onclick="First()">First Function</button>
 <button onclick="Second()">Second Function</button>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
