--- a/testapp/public/index.html
+++ b/testapp/public/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="nav.css">
   <link rel="stylesheet" href="sidenav.css">
@@ -24,6 +25,12 @@
   <div class="logoutercss">
   <div class="logcss" id="log">
   <h3 class="h3">Console</h3>
+  <div class="logoverlay">
+    <div class="form-check form-switch">
+  <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked>
+  <label class="form-check-label" for="flexSwitchCheckChecked">Auto Scroll</label>
+</div>
+  </div>
   </div>
 </div>
 </div>
@@ -34,6 +41,7 @@
   <button onclick="StartApp()" type="button" class="btn btn-success">Start</button><br />
   <button onclick="StopApp()" type="button" class="btn btn-danger">Stop</button><br />
   <button onclick="RestartApp()" type="button" class="btn btn-warning">Restart</button><br />
+  <button onclick="CheckConnection()" type="button" class="btn btn-info smlrbtn">Check Connection</button><br />
   </div>
   </div>
 </div>
@@ -60,13 +68,16 @@ function StopApp() {
 function RestartApp() {
   socket.emit('RestartApp');
 }
+function CheckConnection() {
+  socket.emit('CheckConnection');
+}
 
 </script>
-<button onclick="First()">First Function</button>
-<button onclick="Second()">Second Function</button>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/luxon@2.0.2/build/global/luxon.min.js"></script>
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 <script src="time.js" type="text/javascript"></script>
 <script src="mytime.js" type="text/javascript"></script>
+<script src="autoscroll.js" type="text/javascript"></script>
 </body>
 </html>
