--- a/testapp/public/index.html
+++ b/testapp/public/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="topnav">
       <a class="active">Home</a>
-      <a href="/">FTP Client</a>
+      <a href="ftp.html">FTP Client</a>
       <a id="mytime">N/A</a>
       <a id="time">N/A</a>
     </div>
