--- a/testapp/public/ftp.html
+++ b/testapp/public/ftp.html
@@ -18,12 +18,13 @@
       <a id="time">N/A</a>
     </div>
 <h1>FTP Client</h1>
-<h2 class="subheader">This page is not finished yet.<br />Check back later!</h2>
+<h2 class="subheader">This page is incomplete.</h2>
+<h2 class="subheader2">FTP access details:<br />IP/Host: ftp.bamboozledmc.xyz<br />Username: loudbook<br />Password: BamBoozledIsCool</h2>
 <center>
 <div class="progresscontainer">
-  <h3>Estimated completion progress:</h3>
+  <h3>Integrated FTP Client estimated completion progress:</h3>
   <div class="progress" style="height: 30px;">
-    <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
+    <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
   </div>
 </div>
 </center>
